--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ flutter:
     - lib/images/facebook.png
     - lib/images/instagram.png
     - lib/images/whatsapp.png
+    - lib/images/top.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
